new style - feel and look

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -307,7 +307,7 @@
 </div>
 
 <div class="content" role="main">
-  <h1>My Frist Angular App</h1>
+  <h1 style="color: white;">My Frist Angular App</h1>
 </div>
 
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
