--- a/src/app/comic/comic.component.html
+++ b/src/app/comic/comic.component.html
@@ -1,11 +1,18 @@
 <style>
-h1{
-   padding-left: 240px;
+h1 {
+    color: white;
 }
 </style>
-<h1>Marvel Comic</h1>
 <div class="container">
+    <h1>Marvel Comic</h1>
     <ul class="list-group">
-        <li class="list-group-item" *ngFor="let comic of comics">{{comic}}</li>
+        <li class="list-group-item" *ngFor="let marvel of marvels">{{marvel}}</li>
+      </ul>
+</div>
+<br>
+<div class="container">
+    <h1>DC Comic</h1>
+    <ul class="list-group">
+        <li class="list-group-item" *ngFor="let dc of dcs">{{dc}}</li>
       </ul>
 </div>
