--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -296,7 +296,8 @@
 </style>
 
 <!-- Toolbar -->
-<div class="navbar navbar-dark bg-dark" role="banner">
+<!----------------------------------------------------------------------------------------------------->
+<div class="navbar fixed-top navbar-dark bg-dark" role="banner">
   <img
     width="40"
     alt="Angular Logo"
@@ -306,16 +307,7 @@
     <div class="spacer"></div>
 </div>
 
+
 <div class="content" role="main">
-  <h1 style="color: white;">My First Angular App</h1>
+  <h1 style="color: white; padding-top: 40px;">My First Angular App</h1>
 </div>
-
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * The content above * * * * * * * * * * * -->
-<!-- * * * * * * * * * * is only a placeholder * * * * * * * * * * -->
-<!-- * * * * * * * * * * and can be replaced. * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-<!-- * * * * * * * * * * End of Placeholder * * * * * * * * * * * -->
-<!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-
-
