--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -305,9 +305,10 @@
   />
   <span style="color: #e6ebf1; font-size: x-large;">Welcome to Comic World</span>
     <div class="spacer"></div>
+  <span style="color: #eeeeee;"><strong>Vivek Patel</strong></span>
 </div>
 
 
 <div class="content" role="main">
-  <h1 style="color: white; padding-top: 40px;">My First Angular App</h1>
+  <h1 style="color: white; padding-top: 35px;">My First Angular App</h1>
 </div>
