--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -305,7 +305,7 @@
   />
   <span style="color: #e6ebf1; font-size: x-large;">Welcome to Comic World</span>
     <div class="spacer"></div>
-  <span style="color: #eeeeee;"><strong>Vivek Patel</strong></span>
+  <span style="color: #eeeeee;">Vivek Patel</span>
 </div>
 
 
