--- a/src/app/comic/comic.component.html
+++ b/src/app/comic/comic.component.html
@@ -3,7 +3,8 @@ h1 {
     color: white;
 }
 .row {
-    padding: 40px;
+    padding-left: 40px;
+    padding-right: 40px;
 }
 #sep {
     border-left: 1px solid white;
@@ -18,6 +19,9 @@ li a {
     color: black;
 }
 
+#testcol {
+    padding-top: 27px;
+}
 </style>
 <div class="row">
     <div class="col-sm-5">
@@ -46,7 +50,7 @@ li a {
         </ul>
     </div>
 </div>
-<div class="row">
+<div class="row" id="testcol">
     <div class="col-sm-4">
     </div>
     <div class="col-sm-4">
