--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -23,13 +23,13 @@ li a {
         <p style="color: grey;">Improved version</p>
     </div>
     <div class="col-sm-4">
-            <h1 style="color: white;">Product list</h1>
+            <h1 style="color: white;">Comic - IronMan</h1>
             <ul class="list-group">
                 <li class="list-group-item" *ngFor="let product of products">
                     <h3>
                         <img src="{{product.src}}" style="width: 40px;">
                         <a href="{{product.url}}" target="_blank" *ngIf="product.name" [title]="product.name">
-                            <b>{{ product.name }}</b>
+                            <b> {{ product.name }}</b>
                         </a>
                     </h3>
                     <p *ngIf="product.description">
